--- a/react-frontend/src/static/html/index.html
+++ b/react-frontend/src/static/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html">
 <html>
 <head>
-<title>柏君商城, 综合交易平台，积分换股份电商</title>
+<title>spring cloud</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
-<meta name="keywords" content="柏君商城 综合交易平台 积分换股份电商"/>
+<meta name="keywords" content="spring cloud"/>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
